--- a/display/templates/display/base.html
+++ b/display/templates/display/base.html
@@ -72,16 +72,17 @@
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                    <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by <a
-                            href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                    <h4 class="text-uppercase mb-4">About this website</h4>
+                    <p class="lead mb-0">
+                        This website was created using Django and a bootstrap starting template. 
+                    </p>
                 </div>
             </div>
         </div>
     </footer>
     <!-- Copyright Section-->
     <section class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright © Your Website 2020</small></div>
+        <div class="container"><small>Copyright © Subhanga Upadhyay 2020</small></div>
     </section>
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
