--- a/display/templates/display/index.html
+++ b/display/templates/display/index.html
@@ -59,7 +59,9 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">{{ proj.project_name }}</h2>
+                                    <a href="{{ proj.github_url }}" class="ml-5">{{ proj.github_url }}</a>
+
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mt-4 mb-0">{{ proj.project_name }}</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -68,6 +70,17 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="{{ proj.image.url }}" alt="" />
                                     <p class="mb-5">{{ proj.project_description }}</p>
+
+                                    <p>Technologies used: 
+                                        {% for skillmod in proj.project_type.all %}
+                                        {% if not forloop.last %}
+                                            {{ skillmod.skill }},&nbsp
+                                        {% else %}
+                                            {{ skillmod.skill }}
+                                        {% endif %}
+                                        {% endfor %}
+                                    </p>
+
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -91,13 +104,25 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ml-auto">
+                        <p class="lead">
+                            I am a computer science student, studying at the University of Minnesota - Twin Cities. 
+                            I love developing software, especially ones which augment my life and the lives of 
+                            others.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 mr-auto">
+                        <p class="lead">
+                            I am skilled in Python, Django, traditional web development, and React.
+                            My current goals: solidfy React/Django skills, learn TensorFlow, and do freelancing projects.
+                        </p>
+                    </div>
                 </div>
                 <!-- About Section Button-->
-                <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/"><i class="fas fa-download mr-2"></i>Free Download!</a>
+                <!--<div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light"><i class="fas fa-lightbulb mr-2"></i>Click for a random fact</a>
                 </div>
+            -->
             </div>
         </section>
         <!-- Contact Section-->
@@ -115,7 +140,8 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                        <form method="POST" id="contactForm" name="sentMessage" novalidate="novalidate">
+                            {% csrf_token %}
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>Name</label><input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
