--- a/display/static/display/css/styles.css
+++ b/display/static/display/css/styles.css
@@ -63,6 +63,7 @@ body {
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
+  padding-top: 104px; 
   line-height: 1.5;
   color: #212529;
   text-align: left;
@@ -10210,9 +10211,4 @@ form .row:first-child .floating-label-form-group {
 
 .copyright {
   background-color: #1a252f;
-}
-
-.blogs {
-  height: 750px;
-  margin-top: 115px;
 }
