--- a/display/templates/display/partials/navbar.html
+++ b/display/templates/display/partials/navbar.html
@@ -7,8 +7,7 @@
             aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                {% url 'blog' as blog_url %}
-                {% if request.get_full_path != blog_url %}
+                {% if '/blog/' not in request.get_full_path %}
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                         href="#portfolio">Portfolio</a></li>
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
