--- a/display/templates/display/detail.html
+++ b/display/templates/display/detail.html
@@ -12,8 +12,8 @@
 {% endblock navbar %}
 
 {% block content %}
-    <div class="container">
-        <div id="content_holder" class="mt-2 mb-2">
+    <div class="container" style="height: 1000px;">
+        <div id="content_holder" class="mt-5 mb-2">
             <img id="image" style="height: 400px; width: 400px">
         </div>
     </div>
